# python-brcode

./: README.md  pyproject.toml
brcode/: __init__.py  crc.py
tests/: test_brcode.py  test_crc.py
