[tool.poetry]
name = "brcode"
version = "0.1.0"
description = "Generates static BR Codes that could be used for PIX payments using simple value copy and paste or generating QR Codes."
authors = ["Victor Torres <vpaivatorres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
